objects/firepond__Item__c.object
<CustomObject>
    <fields>
        <fullName>PKI_EULA__c</fullName>
        <label>EULA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_License_Agreement__c</fullName>
        <label>License Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMBS</fullName>
                </value>
                <value>
                    <fullName>IXP</fullName>
                </value>
                <value>
                    <fullName>LBWK</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_License_Type__c</fullName>
        <label>License Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Maintenance_On_Perpetual_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance on a Perpetual License?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_Platform__c</fullName>
        <label>Platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKI_SOW_Required__c</fullName>
        <label>SOW Required</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Specials_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special product identification</description>
        <label>Specials Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_Term_Length__c</fullName>
        <label>Term Length</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PKI_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Quote_Date__c</fullName>
        <label>Previous Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Quote__c</fullName>
        <label>Previous Quote</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Years_Price__c</fullName>
        <label>Prior Years Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>